# dbareana

./: IMPLEMENTATION_SUMMARY.md
cli/: Cargo.toml  IMPLEMENTATION_COMPLETE.md  INSTALL_SCRIPT_ADDED.md  PATCH_v0.2.1_COMPLETE.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.1.md  RELEASE_NOTES_v0.4.0.md  RELEASE_PREPARATION.md  RELEASE_v0.3.0_COMPLETE.md  RELEASE_v0.4.0_READY.md  RUN_TESTS.md  SMOKE_TEST_v0.4.0.md  TESTING_PLAN.md  TEST_EXECUTION_REPORT.md  TEST_SUITE_COMPLETE.md  V0.2.0_COMPLETE.md  dbarena-v0.2.0-aarch64-apple-darwin.sha256  install.sh  manual_test_script.sh  test_workload.sh
cli/docs/: CONFIGURATION.md  EXEC_COMMAND.md  INTERACTIVE_COMMANDS.md  MIGRATION_V0.2.md  PHASE_6_7_8_SUMMARY.md  TESTING_PHASE8.md  V0.5.0_COMPLETE.md  seeding.md  tutorial-v0.5.md  workload.md
cli/examples/: .env.example  README.md  seed-basic.toml  seed-ecommerce.toml  seed-timeseries.toml  workload-custom-mix.toml  workload-custom-sql.toml  workload-ecommerce.toml  workload-oltp.toml
cli/examples/scripts/: postgres-seed.sql
cli/src/: error.rs  lib.rs  main.rs
cli/src/cli/: interactive.rs  mod.rs
cli/src/config/: loader.rs  merger.rs  mod.rs  profile.rs  template.rs
cli/src/container/: config.rs  docker_client.rs  manager.rs
cli/src/database_metrics/: collector.rs  mod.rs  models.rs  mysql.rs  postgres.rs  sqlserver.rs
cli/src/docs/: catalog.rs  chunk.rs  ids.rs  index.rs  installer.rs  manifest.rs  mod.rs  normalize.rs  paths.rs  search.rs  storage.rs
cli/src/health/: implementations.rs  mod.rs
cli/src/init/: executor.rs  mod.rs
cli/src/monitoring/: docker_stats.rs  logs.rs  metrics.rs  mod.rs  tui.rs
cli/src/network/: manager.rs  mod.rs  models.rs
cli/src/seed/: config.rs  dependency.rs  engine.rs  foreign_key.rs  generator.rs  mod.rs  models.rs  presets.rs  sql_builder.rs
cli/src/snapshot/: manager.rs  storage.rs
cli/src/workload/: config.rs  display.rs  engine.rs  engine_old.rs  metadata.rs  mod.rs  operations.rs  rate_limiter.rs  stats.rs
cli/tests/: WORKLOAD_TESTING.md  debug_tar_upload.rs  docs_install.rs  integration_tests.rs  phase8_performance.rs  smoke_tests.rs  unit_tests.rs  workload_integration_test.rs
cli/tests/common/: mod.rs
cli/tests/integration/: config_commands_tests.rs  container_lifecycle.rs  database_metrics_tests.rs  exec_tests.rs  init_script_tests.rs  log_streaming_tests.rs  metrics_accuracy_tests.rs  mod.rs  network_tests.rs  qps_tps_accuracy_tests.rs  snapshot_tests.rs  stats_tests.rs  template_tests.rs  tui_rendering_tests.rs  v0_1_0_integration_tests.rs  volume_tests.rs
cli/tests/unit/: cli_parsing_tests.rs  database_metrics_tests.rs  init_tests.rs  logs_tests.rs  mod.rs  monitoring_tests.rs  template_tests.rs  tui_tests.rs  v0_1_0_tests.rs
dbarena/: Cargo.toml  INSTALL_SCRIPT_ADDED.md  MANUAL_TEST_RESULTS.md  PATCH_v0.2.1_COMPLETE.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.1.md  RELEASE_PUBLISHED.md  RELEASE_v0.3.0_COMPLETE.md  SMOKE_TEST_RESULTS_v0.3.0.md  TEST_IMPLEMENTATION_STATUS.md  dbarena-v0.2.1-aarch64-apple-darwin.sha256  dbarena-v0.3.0-aarch64-apple-darwin.sha256  install.sh  quick_manual_tests.sh  release.sh  uninstall.sh
dbarena/docs/: INIT_SCRIPTS.md  INTERACTIVE_MODE.md
dbarena/examples/: dbarena-minimal.toml  dbarena.toml  profiles.toml
dbarena/examples/scripts/: mysql-schema.sql  mysql-seed.sql  postgres-schema.sql  sqlserver-schema.sql
dbarena/src/: error.rs  lib.rs  main.rs
dbarena/src/cli/: interactive.rs  mod.rs
dbarena/src/config/: merger.rs  schema.rs  validator.rs
dbarena/tests/: debug_tar_upload.rs  integration_tests.rs  unit_tests.rs
(+147 files in other folders)
