[package]
name = "dbarena"
version = "0.4.0"
edition = "2021"
authors = ["dbarena Contributors"]
description = "A high-performance database simulation environment with Docker container management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/dbarena"
keywords = ["database", "docker", "testing", "simulation"]
categories = ["development-tools", "database"]

[dependencies]
bollard = "0.16"
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console = "0.15"
indicatif = "0.17"
async-trait = "0.1"
futures = "0.3"
rand = "0.8"
chrono = "0.4"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
toml = "0.8"
dirs = "5.0"
glob = "0.3"
serde_yaml = "0.9"
tar = "0.4"
uuid = { version = "1.0", features = ["v4"] }
ratatui = "0.26"
crossterm = "0.27"
fake = { version = "2.9", features = ["derive", "chrono"] }
rand_chacha = "0.3"
hdrhistogram = "7.5"
governor = "0.6"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
